--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>共有リアルタイム多重カウントダウンタイマー (Firebase版)</title>
+<title>共有リアルタイム多重カウントダウンタイマー (Firebase + 音通知 + 自動ログ保存版)</title>
 <style>
   body{background:#fff;color:#000;font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial;margin:0;padding:0;}
   header{position:sticky;top:0;background:#fff;border-bottom:2px solid #001f3f;padding:10px;z-index:10;}
@@ -11,6 +11,7 @@
   button{border:2px solid #001f3f;background:#fff;color:#001f3f;border-radius:8px;padding:5px 6px;font-weight:600;cursor:pointer;min-width:50px;font-size:13px;}
   button:disabled{border-color:#ccc;color:#aaa;cursor:not-allowed;}
   .btn-blue{background:#007BFF;border-color:#007BFF;color:#fff;}
+  .btn-green{background:#28a745;border-color:#28a745;color:#fff;}
   .list{display:grid;grid-auto-flow:column;grid-auto-columns:min-content;gap:16px;padding:16px;}
   .column{display:flex;flex-direction:column;gap:16px;}
   .timer{border:2px solid #001f3f;border-radius:10px;padding:10px;display:flex;flex-direction:column;gap:8px;width:300px;}
@@ -25,6 +26,7 @@
 <header>
   <div class="toolbar">
     <button id="addTimer" class="btn-blue">＋ 新規タイマー</button>
+    <button id="enableSound" class="btn-green">音を有効化/テスト</button>
   </div>
 </header>
 <main>
@@ -32,7 +34,7 @@
 </main>
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-  import { getDatabase, ref, set, onValue, push, update, remove, get } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+  import { getDatabase, ref, set, onValue, push, update, remove } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
   const firebaseConfig = {
     apiKey: "AIzaSyCSIIPz6Q8RRH1ijLcU-SD74IWk10lt2Uk",
@@ -49,7 +51,20 @@
 
   const list=document.getElementById('list');
   const addBtn=document.getElementById('addTimer');
-  let timers={};
+  const soundBtn=document.getElementById('enableSound');
+  let timers={}; let audioCtx=null; let unlocked=false;
+
+  function ensureAudio(){
+    if(!audioCtx){try{audioCtx=new (window.AudioContext||window.webkitAudioContext)();}catch(e){}}
+    else if(audioCtx.state==='suspended'){audioCtx.resume();}
+    unlocked=!!audioCtx;
+    return audioCtx;
+  }
+  function beep(){const ctx=ensureAudio();if(!ctx)return;const o=ctx.createOscillator();const g=ctx.createGain();o.type='square';o.frequency.setValueAtTime(1200,ctx.currentTime);g.gain.setValueAtTime(0.001,ctx.currentTime);g.gain.exponentialRampToValueAtTime(0.15,ctx.currentTime+0.05);g.gain.exponentialRampToValueAtTime(0.001,ctx.currentTime+0.2);o.connect(g).connect(ctx.destination);o.start();o.stop(ctx.currentTime+0.25);}
+
+  soundBtn.addEventListener('click',()=>{ensureAudio();for(let i=0;i<5;i++)setTimeout(beep,i*200);});
+
+  function logEvent(action, detail=""){const ts=new Date().toISOString();push(ref(db,'logs'),{action,detail,timestamp:ts});}
 
   function fmt(sec){const h=Math.floor(sec/3600),m=Math.floor((sec%3600)/60),s=sec%60;return `${String(h).padStart(2,'0')}:${String(m).padStart(2,'0')}:${String(s).padStart(2,'0')}`;}
   function render(){list.innerHTML='';const arr=Object.values(timers);const cols=Math.ceil(arr.length/5);for(let c=0;c<cols;c++){const col=document.createElement('div');col.className='column';arr.slice(c*5,c*5+5).forEach(t=>col.appendChild(renderTimer(t)));list.appendChild(col);}updateBars();}
@@ -61,17 +76,17 @@
       ${[['+1h',3600],['+10min',600],['+5min',300],['+1min',60]].map(([l,s])=>`<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`).join('')}
     </div>
     <div class="presets">
-      ${[['+10sec',10],['+5sec',5],['+1sec',1]].map(([l,s])=>`<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`).join('')}<button class='js-reset'>再設定</button>
+      ${[['+10sec',10],['+5sec',5],['+1sec',1]].map(([l,s])=>`<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`).join('')}<button class='js-reset0'>再設定</button>
     </div>
     <div class="progress"><div class="bar js-bar"></div></div>
     <div class="presets">
-      <button class='js-start'>Start</button><button class='js-pause'>Pause</button><button class='js-reset2'>Reset</button><button class='js-delete'>Delete</button>
+      <button class='js-start'>Start</button><button class='js-pause'>Pause</button><button class='js-reset'>Reset</button><button class='js-delete'>Delete</button>
     </div>`;
 
     d.querySelector('.js-name').addEventListener('change',e=>updateTimer(t.id,{name:e.target.value}));
     d.querySelectorAll('.js-extend').forEach(b=>b.addEventListener('click',()=>extendTimer(t.id,Number(b.dataset.sec))));
+    d.querySelector('.js-reset0').addEventListener('click',()=>resetToZero(t.id));
     d.querySelector('.js-reset').addEventListener('click',()=>resetTimer(t.id));
-    d.querySelector('.js-reset2').addEventListener('click',()=>resetTimer(t.id));
     d.querySelector('.js-start').addEventListener('click',()=>startTimer(t.id));
     d.querySelector('.js-pause').addEventListener('click',()=>pauseTimer(t.id));
     d.querySelector('.js-delete').addEventListener('click',()=>deleteTimer(t.id));
@@ -81,43 +96,24 @@
 
   function updateBars(){document.querySelectorAll('.timer').forEach(box=>{const id=box.dataset.id;const t=timers[id];if(!t)return;box.querySelector('.js-time').textContent=fmt(t.remain);const bar=box.querySelector('.js-bar');const pct=t.total>0?Math.max(0,Math.min(100,(1-(t.remain/t.total))*100)):0;bar.style.width=pct+'%';box.querySelectorAll('.js-extend').forEach(b=>b.disabled=t.running);});}
 
-  function newTimerObj(sec){const id=push(ref(db,'timers')).key;return{id,name:'タイマー',total:sec,remain:sec,running:false,startTime:null,lastUpdate:Date.now()};}
+  function newTimerObj(sec){const newRef=push(ref(db,'timers'));const id=newRef.key;const t={id,name:'タイマー',total:sec,remain:sec,running:false,startTime:null,lastUpdate:Date.now()};set(newRef,t);return t;}
 
-  function addTimer(){const v=prompt('タイマー時間を入力 (例: 1h, 3m, 90s, 120)');if(v===null)return;const sec=parseDuration(v);if(!sec){alert('正しい値を入力してください');return;}const t=newTimerObj(sec);set(ref(db,'timers/'+t.id),t);}
+  function addTimer(){const v=prompt('タイマー時間を入力 (例: 1h, 3m, 90s, 120)');if(v===null)return;const sec=parseDuration(v);if(!sec){alert('正しい値を入力してください');return;}const t=newTimerObj(sec);logEvent('Create',`${t.name} total=${t.total}s`);}
   function parseDuration(text){if(!text)return null;const t=text.trim();const mm=t.match(/(\d+)m/i);const ss=t.match(/(\d+)s/i);let sec=0;if(mm)sec+=parseInt(mm[1])*60;if(ss)sec+=parseInt(ss[1]);if(!mm&&!ss)sec=parseInt(t)||0;return sec>0?sec:null;}
 
   function updateTimer(id,data){update(ref(db,'timers/'+id),data);}
-  function extendTimer(id,sec){const t=timers[id];if(!t||t.running)return;updateTimer(id,{remain:t.remain+sec});}
-  function resetTimer(id){const t=timers[id];if(!t)return;if(!confirm(`「${t.name}」を初期 ${fmt(t.total)} に戻します。よろしいですか？`))return;updateTimer(id,{remain:t.total,running:false,lastUpdate:Date.now()});}
-  function startTimer(id){const t=timers[id];if(!t||t.running)return;updateTimer(id,{running:true,startTime:Date.now(),lastUpdate:Date.now()});}
-  function pauseTimer(id){const t=timers[id];if(!t||!t.running)return;updateTimer(id,{running:false,lastUpdate:Date.now(),total:t.remain});}
-  function deleteTimer(id){if(!confirm('削除しますか？'))return;remove(ref(db,'timers/'+id));}
+  function extendTimer(id,sec){const t=timers[id];if(!t||t.running)return;updateTimer(id,{remain:t.remain+sec});logEvent('Extend',`${t.name} +${sec}s`);}
+  function resetToZero(id){const t=timers[id];if(!t)return;updateTimer(id,{remain:0,running:false});logEvent('ResetZero',t.name);}
+  function resetTimer(id){const t=timers[id];if(!t)return;if(!confirm(`「${t.name}」を初期 ${fmt(t.total)} に戻します。よろしいですか？`))return;updateTimer(id,{remain:t.total,running:false});logEvent('Reset',t.name);}
+  function startTimer(id){const t=timers[id];if(!t||t.running)return;updateTimer(id,{running:true,startTime:Date.now()});logEvent('Start',t.name);}
+  function pauseTimer(id){const t=timers[id];if(!t||!t.running)return;updateTimer(id,{running:false});logEvent('Pause',t.name);}
+  function deleteTimer(id){if(!confirm('削除しますか？'))return;remove(ref(db,'timers/'+id));logEvent('Delete',id);}
 
-  // 差分反映：離脱中も進行するように調整
   onValue(ref(db,'timers'),snap=>{
-    const now=Date.now();
-    timers=snap.val()||{};
-    Object.values(timers).forEach(t=>{
-      if(t.running&&t.startTime){
-        const elapsed=Math.floor((now-t.startTime)/1000);
-        const newRemain=Math.max(0,t.total-elapsed);
-        if(newRemain!==t.remain){updateTimer(t.id,{remain:newRemain});}
-      }
-    });
-    render();
-  });
+    const now=Date.now();timers=snap.val()||{};Object.values(timers).forEach(t=>{if(t.running&&t.startTime){const elapsed=Math.floor((now-t.startTime)/1000);const newRemain=Math.max(0,t.total-elapsed);if(newRemain!==t.remain){updateTimer(t.id,{remain:newRemain});}}});render();});
 
   setInterval(()=>{
-    const now=Date.now();
-    Object.values(timers).forEach(t=>{
-      if(t.running&&t.remain>0&&t.startTime){
-        const diff=Math.floor((now-t.startTime)/1000);
-        const newRemain=Math.max(0,t.total-diff);
-        if(newRemain!==t.remain){updateTimer(t.id,{remain:newRemain});}
-      }
-    });
-    updateBars();
-  },1000);
+    const now=Date.now();Object.values(timers).forEach(t=>{if(t.running&&t.remain>0&&t.startTime){const diff=Math.floor((now-t.startTime)/1000);const newRemain=Math.max(0,t.total-diff);if(newRemain!==t.remain){updateTimer(t.id,{remain:newRemain});if(newRemain===0){logEvent('Completed',t.name);for(let i=0;i<6;i++)setTimeout(beep,i*250);}}}});updateBars();},1000);
 
   addBtn.addEventListener('click',addTimer);
 </script>
