--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>共有リアルタイム多重カウントダウンタイマー (Firebase + 自動ログ保存版)</title>
+<title>共有リアルタイム多重カウントダウンタイマー (Firebase)</title>
 <style>
-  body{background:#fff;color:#000;font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial;margin:0;padding:0;}
+  body{background:#fff;color:#000;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;margin:0;padding:0;}
   header{position:sticky;top:0;background:#fff;border-bottom:2px solid #001f3f;padding:10px;z-index:10;}
   .toolbar{display:flex;flex-wrap:wrap;gap:8px;align-items:center;}
   button{border:2px solid #001f3f;background:#fff;color:#001f3f;border-radius:8px;padding:5px 6px;font-weight:600;cursor:pointer;min-width:50px;font-size:13px;}
@@ -36,7 +36,6 @@
   <div class="list" id="list"></div>
 </main>
 
-<!-- 完了モーダル -->
 <div id="doneModal" class="modal">
   <div class="modal-inner">
     <h3 id="doneTitle">タイマー完了</h3>
@@ -72,21 +71,17 @@ const doneMsg = document.getElementById('doneMessage');
 let timers = {};
 let audioCtx = null;
 
-// ====== 音処理 ======
+// ===== 音 =====
 function ensureAudio() {
   if (!audioCtx) {
     try { audioCtx = new (window.AudioContext || window.webkitAudioContext)(); } catch (e) {}
-  } else if (audioCtx.state === "suspended") {
-    audioCtx.resume();
-  }
+  } else if (audioCtx.state === "suspended") audioCtx.resume();
   return audioCtx;
 }
-
 function beepPattern() {
   const ctx = ensureAudio(); if (!ctx) return;
   const base = ctx.currentTime;
-  const pattern = [0, 0.3, 0.6]; // ピピピ
-  pattern.forEach((delay) => {
+  [0, 0.3, 0.6].forEach((delay) => {
     const osc = ctx.createOscillator();
     const gain = ctx.createGain();
     osc.frequency.setValueAtTime(1200, base + delay);
@@ -97,170 +92,68 @@ function beepPattern() {
     osc.stop(base + delay + 0.2);
   });
 }
-
 enableSoundBtn.addEventListener("click", () => { ensureAudio(); beepPattern(); });
 
-// ====== ログ ======
-function logEvent(action, detail = "") {
+// ===== ログ =====
+function logEvent(action, detail="") {
   const ts = new Date().toISOString();
   push(ref(db, "logs"), { action, detail, timestamp: ts });
 }
 
-// ====== タイマー関連 ======
-function fmt(sec) {
-  const s = Math.max(0, Math.floor(sec));
-  const h = Math.floor(s / 3600), m = Math.floor((s % 3600) / 60), r = s % 60;
-  return `${String(h).padStart(2,'0')}:${String(m).padStart(2,'0')}:${String(r).padStart(2,'0')}`;
-}
+// ===== Timer Utilities =====
+function fmt(sec){const s=Math.max(0,Math.floor(sec));const h=Math.floor(s/3600),m=Math.floor((s%3600)/60),r=s%60;return `${String(h).padStart(2,'0')}:${String(m).padStart(2,'0')}:${String(r).padStart(2,'0')}`;}
+function parseDuration(t){if(!t)return null;t=t.trim();const h=t.match(/(\d+)h/i);const m=t.match(/(\d+)m/i);const s=t.match(/(\d+)s/i);let sec=0;if(h)sec+=+h[1]*3600;if(m)sec+=+m[1]*60;if(s)sec+=+s[1];if(!h&&!m&&!s)sec=parseInt(t)||0;return sec>0?sec:null;}
 
-function parseDuration(text) {
-  if (!text) return null;
-  const t = text.trim();
-  const h = t.match(/(\d+)h/i);
-  const m = t.match(/(\d+)m/i);
-  const s = t.match(/(\d+)s/i);
-  let sec = 0;
-  if (h) sec += parseInt(h[1]) * 3600;
-  if (m) sec += parseInt(m[1]) * 60;
-  if (s) sec += parseInt(s[1]);
-  if (!h && !m && !s) sec = parseInt(t) || 0;
-  return sec > 0 ? sec : null;
-}
+function newTimerObj(sec){const id=push(ref(db,"timers")).key;return{id,name:"タイマー",total:sec,remain:sec,running:false,startTime:null};}
 
-function newTimerObj(sec) {
-  const id = push(ref(db, "timers")).key;
-  return { id, name: "タイマー", total: sec, remain: sec, running: false, startTime: null, lastUpdate: Date.now() };
-}
+// ===== CRUD =====
+function addTimer(){const v=prompt("タイマー時間を入力 (例: 1h, 3m, 90s, 120)");if(!v)return;const sec=parseDuration(v);if(!sec){alert("正しい値を入力してください");return;}const t=newTimerObj(sec);set(ref(db,"timers/"+t.id),t);logEvent("Create",`${t.name} total=${t.total}s`);}
+function extendTimer(id,sec){const t=timers[id];if(!t||t.running)return;update(ref(db,"timers/"+id),{remain:t.remain+sec});logEvent("Extend",`${t.name} +${sec}s`);}
+function resetTimer(id,toZero=false){const t=timers[id];if(!t)return;update(ref(db,"timers/"+id),{remain:toZero?0:t.total,running:false,startTime:null});logEvent("Reset",t.name);}
+function startTimer(id){const t=timers[id];if(!t||t.running)return;update(ref(db,"timers/"+id),{running:true,startTime:Date.now()});logEvent("Start",t.name);}
+function pauseTimer(id){const t=timers[id];if(!t||!t.running)return;update(ref(db,"timers/"+id),{running:false});logEvent("Pause",t.name);}
+function deleteTimer(id){if(!confirm("削除しますか？"))return;remove(ref(db,"timers/"+id));logEvent("Delete",id);}
+function resetAll(){if(!confirm("⚠️ 全てのタイマーを削除しますか？"))return;set(ref(db,"timers"),{});logEvent("ResetAll","全体リセット");}
 
-function render() {
-  list.innerHTML = "";
-  const arr = Object.values(timers).filter(t=>t && typeof t.total==="number");
-  const cols = Math.ceil(arr.length / 5);
-  for (let c = 0; c < cols; c++) {
-    const col = document.createElement("div");
-    col.className = "column";
-    arr.slice(c * 5, c * 5 + 5).forEach(t => col.appendChild(renderTimer(t)));
-    list.appendChild(col);
-  }
-  updateBars();
-}
+// ===== Rendering =====
+function render(){list.innerHTML="";const arr=Object.values(timers||{});const cols=Math.ceil(arr.length/5);for(let c=0;c<cols;c++){const col=document.createElement("div");col.className="column";arr.slice(c*5,c*5+5).forEach(t=>col.appendChild(renderTimer(t)));list.appendChild(col);}updateBars();}
+function renderTimer(t){const d=document.createElement("div");d.className="timer";d.dataset.id=t.id;d.innerHTML=`
+<input type="text" class="js-name" value="${t.name}">
+<div class="time js-time">${fmt(t.remain)}</div>
+<div class="presets">${[['+1h',3600],['+10min',600],['+5min',300],['+1min',60]].map(([l,s])=>`<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`).join('')}</div>
+<div class="presets">${[['+10sec',10],['+5sec',5],['+1sec',1]].map(([l,s])=>`<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`).join('')}<button class='js-reset'>再設定</button></div>
+<div class="progress"><div class="bar js-bar"></div></div>
+<div class="presets"><button class='js-start'>Start</button><button class='js-pause'>Pause</button><button class='js-reset2'>Reset</button><button class='js-delete'>Delete</button></div>`;
+d.querySelector(".js-name").addEventListener("change",e=>update(ref(db,"timers/"+t.id),{name:e.target.value}));
+d.querySelectorAll(".js-extend").forEach(b=>b.addEventListener("click",()=>extendTimer(t.id,Number(b.dataset.sec))));
+d.querySelector(".js-reset").addEventListener("click",()=>resetTimer(t.id,true));
+d.querySelector(".js-reset2").addEventListener("click",()=>resetTimer(t.id,false));
+d.querySelector(".js-start").addEventListener("click",()=>startTimer(t.id));
+d.querySelector(".js-pause").addEventListener("click",()=>pauseTimer(t.id));
+d.querySelector(".js-delete").addEventListener("click",()=>deleteTimer(t.id));
+return d;}
+function updateBars(){document.querySelectorAll(".timer").forEach(box=>{const id=box.dataset.id;const t=timers[id];if(!t)return;box.querySelector(".js-time").textContent=fmt(t.remain);const bar=box.querySelector(".js-bar");const pct=t.total>0?Math.max(0,Math.min(100,(1-(t.remain/t.total))*100)):0;bar.style.width=pct+"%";box.querySelectorAll(".js-extend").forEach(b=>b.disabled=t.running);});}
 
-function renderTimer(t) {
-  const d = document.createElement("div");
-  d.className = "timer";
-  d.dataset.id = t.id;
-  d.innerHTML = `
-    <input type="text" class="js-name" value="${t.name}">
-    <div class="time js-time">${fmt(t.remain)}</div>
-    <div class="presets">
-      ${[['+1h',3600],['+10min',600],['+5min',300],['+1min',60]].map(([l,s])=>`<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`).join('')}
-    </div>
-    <div class="presets">
-      ${[['+10sec',10],['+5sec',5],['+1sec',1]].map(([l,s])=>`<button class='btn-blue js-extend' data-sec='${s}'>${l}</button>`).join('')}<button class='js-reset'>再設定</button>
-    </div>
-    <div class="progress"><div class="bar js-bar"></div></div>
-    <div class="presets">
-      <button class='js-start'>Start</button><button class='js-pause'>Pause</button><button class='js-reset2'>Reset</button><button class='js-delete'>Delete</button>
-    </div>`;
-  // イベント設定
-  d.querySelector(".js-name").addEventListener("change", e => update(ref(db, "timers/" + t.id), { name: e.target.value }));
-  d.querySelectorAll(".js-extend").forEach(b => b.addEventListener("click", () => extendTimer(t.id, Number(b.dataset.sec))));
-  d.querySelector(".js-reset").addEventListener("click", () => resetTimer(t.id,true));
-  d.querySelector(".js-reset2").addEventListener("click", () => resetTimer(t.id,false));
-  d.querySelector(".js-start").addEventListener("click", () => startTimer(t.id));
-  d.querySelector(".js-pause").addEventListener("click", () => pauseTimer(t.id));
-  d.querySelector(".js-delete").addEventListener("click", () => deleteTimer(t.id));
-  return d;
-}
-
-function updateBars() {
-  document.querySelectorAll(".timer").forEach(box => {
-    const id = box.dataset.id;
-    const t = timers[id];
-    if (!t) return;
-    box.querySelector(".js-time").textContent = fmt(t.remain);
-    const bar = box.querySelector(".js-bar");
-    const pct = t.total > 0 ? Math.max(0, Math.min(100, (1 - (t.remain / t.total)) * 100)) : 0;
-    bar.style.width = pct + "%";
-    box.querySelectorAll(".js-extend").forEach(b => b.disabled = t.running);
-  });
-}
-
-function addTimer() {
-  const v = prompt("タイマー時間を入力 (例: 1h, 3m, 90s, 120)");
-  if (v === null) return;
-  const sec = parseDuration(v);
-  if (!sec) { alert("正しい値を入力してください"); return; }
-  const t = newTimerObj(sec);
-  set(ref(db, "timers/" + t.id), t);
-  logEvent("Create", `${t.name} total=${t.total}s`);
-}
-
-function extendTimer(id, sec) {
-  const t = timers[id];
-  if (!t || t.running) return;
-  update(ref(db, "timers/" + id), { remain: t.remain + sec });
-  logEvent("Extend", `${t.name} +${sec}s`);
-}
-
-function resetTimer(id, toZero=false) {
-  const t = timers[id]; if (!t) return;
-  const newRemain = toZero ? 0 : t.total;
-  update(ref(db, "timers/" + id), { remain: newRemain, running: false, startTime: null });
-  logEvent("Reset", t.name + (toZero ? " to 0" : ""));
-}
-
-function startTimer(id) {
-  const t = timers[id]; if (!t || t.running) return;
-  const offset = t.lastPause ? (Date.now() - t.lastPause)/1000 : 0;
-  update(ref(db, "timers/" + id), { running: true, startTime: Date.now() - offset*1000 });
-  logEvent("Start", t.name);
-}
-
-function pauseTimer(id) {
-  const t = timers[id]; if (!t || !t.running) return;
-  update(ref(db, "timers/" + id), { running: false, lastPause: Date.now() });
-  logEvent("Pause", t.name);
-}
-
-function deleteTimer(id) {
-  if (!confirm("削除しますか？")) return;
-  remove(ref(db, "timers/" + id));
-  logEvent("Delete", id);
-}
-
-function resetAll() {
-  if (!confirm("⚠️ すべてのタイマーとログを削除しますか？")) return;
-  set(ref(db, "timers"), {});
-  logEvent("ResetAll", "全体リセット");
-}
-
-onValue(ref(db, "timers"), snap => {
-  timers = snap.val() || {};
-  const now = Date.now();
-  Object.values(timers).forEach(t => {
-    if (!t || typeof t.total!=="number") return;
-    if (t.running && t.startTime) {
-      const elapsed = Math.floor((now - t.startTime) / 1000);
-      const newRemain = Math.max(0, t.total - elapsed);
-      if (newRemain !== t.remain) {
-        update(ref(db, "timers/" + t.id), { remain: newRemain });
-        if (newRemain === 0) {
-          logEvent("Completed", t.name);
-          beepPattern();
-          doneMsg.textContent = `${t.name} が完了しました`;
-          modal.style.display = "flex";
-        }
+// ===== Firebase Sync =====
+onValue(ref(db,"timers"),snap=>{
+  timers=snap.val()||{};
+  const now=Date.now();
+  Object.values(timers).forEach(t=>{
+    if(t.running&&t.startTime){
+      const elapsed=Math.floor((now-t.startTime)/1000);
+      const remain=Math.max(0,t.total-elapsed);
+      if(remain!==t.remain){
+        update(ref(db,"timers/"+t.id),{remain});
+        if(remain===0){logEvent("Completed",t.name);beepPattern();doneMsg.textContent=`${t.name} が完了しました`;modal.style.display="flex";}
       }
     }
   });
   render();
 });
 
-setInterval(updateBars, 1000);
-doneOk.addEventListener("click", () => { modal.style.display = "none"; });
-addBtn.addEventListener("click", addTimer);
-resetAllBtn.addEventListener("click", resetAll);
+doneOk.addEventListener("click",()=>{modal.style.display="none";});
+addBtn.addEventListener("click",addTimer);
+resetAllBtn.addEventListener("click",resetAll);
 </script>
 </body>
 </html>
