--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>共有リアルタイム多重カウントダウンタイマー (Firebase)</title>
+<title>共有リアルタイム多重カウントダウンタイマー (Firebase版)</title>
 <style>
   body{background:#fff;color:#000;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;margin:0;padding:0;}
   header{position:sticky;top:0;background:#fff;border-bottom:2px solid #001f3f;padding:10px;z-index:10;}
@@ -36,9 +36,10 @@
   <div class="list" id="list"></div>
 </main>
 
+<!-- 完了モーダル -->
 <div id="doneModal" class="modal">
   <div class="modal-inner">
-    <h3 id="doneTitle">タイマー完了</h3>
+    <h3>タイマー完了</h3>
     <p id="doneMessage">タイマーが完了しました。</p>
     <button id="doneOk" class="btn-blue">OK</button>
   </div>
@@ -60,16 +61,18 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
-const list = document.getElementById('list');
-const addBtn = document.getElementById('addTimer');
-const enableSoundBtn = document.getElementById('enableSound');
-const resetAllBtn = document.getElementById('resetAll');
-const modal = document.getElementById('doneModal');
-const doneOk = document.getElementById('doneOk');
-const doneMsg = document.getElementById('doneMessage');
+const list = document.getElementById("list");
+const addBtn = document.getElementById("addTimer");
+const enableSoundBtn = document.getElementById("enableSound");
+const resetAllBtn = document.getElementById("resetAll");
+const modal = document.getElementById("doneModal");
+const doneOk = document.getElementById("doneOk");
+const doneMsg = document.getElementById("doneMessage");
 
 let timers = {};
+let localTimers = {}; // ローカル描画用
 let audioCtx = null;
+let beepLoop = null;
 
 // ===== 音 =====
 function ensureAudio() {
@@ -78,7 +81,7 @@ function ensureAudio() {
   } else if (audioCtx.state === "suspended") audioCtx.resume();
   return audioCtx;
 }
-function beepPattern() {
+function beepOnce() {
   const ctx = ensureAudio(); if (!ctx) return;
   const base = ctx.currentTime;
   [0, 0.3, 0.6].forEach((delay) => {
@@ -92,22 +95,45 @@ function beepPattern() {
     osc.stop(base + delay + 0.2);
   });
 }
-enableSoundBtn.addEventListener("click", () => { ensureAudio(); beepPattern(); });
+function startBeepLoop() {
+  stopBeepLoop();
+  const ctx = ensureAudio(); if (!ctx) return;
+  beepLoop = setInterval(() => {
+    const osc = ctx.createOscillator();
+    const gain = ctx.createGain();
+    osc.frequency.setValueAtTime(1200, ctx.currentTime);
+    gain.gain.setValueAtTime(0.2, ctx.currentTime);
+    gain.gain.exponentialRampToValueAtTime(0.001, ctx.currentTime + 0.2);
+    osc.connect(gain).connect(ctx.destination);
+    osc.start(ctx.currentTime);
+    osc.stop(ctx.currentTime + 0.2);
+  }, 1200);
+}
+function stopBeepLoop() {
+  if (beepLoop) { clearInterval(beepLoop); beepLoop = null; }
+}
+enableSoundBtn.addEventListener("click", () => { ensureAudio(); beepOnce(); });
 
 // ===== ログ =====
-function logEvent(action, detail="") {
+function logEvent(action, detail = "") {
   const ts = new Date().toISOString();
   push(ref(db, "logs"), { action, detail, timestamp: ts });
 }
 
-// ===== Timer Utilities =====
+// ===== タイマー処理 =====
 function fmt(sec){const s=Math.max(0,Math.floor(sec));const h=Math.floor(s/3600),m=Math.floor((s%3600)/60),r=s%60;return `${String(h).padStart(2,'0')}:${String(m).padStart(2,'0')}:${String(r).padStart(2,'0')}`;}
 function parseDuration(t){if(!t)return null;t=t.trim();const h=t.match(/(\d+)h/i);const m=t.match(/(\d+)m/i);const s=t.match(/(\d+)s/i);let sec=0;if(h)sec+=+h[1]*3600;if(m)sec+=+m[1]*60;if(s)sec+=+s[1];if(!h&&!m&&!s)sec=parseInt(t)||0;return sec>0?sec:null;}
-
 function newTimerObj(sec){const id=push(ref(db,"timers")).key;return{id,name:"タイマー",total:sec,remain:sec,running:false,startTime:null};}
 
-// ===== CRUD =====
-function addTimer(){const v=prompt("タイマー時間を入力 (例: 1h, 3m, 90s, 120)");if(!v)return;const sec=parseDuration(v);if(!sec){alert("正しい値を入力してください");return;}const t=newTimerObj(sec);set(ref(db,"timers/"+t.id),t);logEvent("Create",`${t.name} total=${t.total}s`);}
+function addTimer(){
+  const v=prompt("タイマー時間を入力 (例: 1h, 3m, 90s, 120)");
+  if(!v)return;
+  const sec=parseDuration(v);
+  if(!sec){alert("正しい値を入力してください");return;}
+  const t=newTimerObj(sec);
+  set(ref(db,"timers/"+t.id),t);
+  logEvent("Create",`${t.name} total=${t.total}s`);
+}
 function extendTimer(id,sec){const t=timers[id];if(!t||t.running)return;update(ref(db,"timers/"+id),{remain:t.remain+sec});logEvent("Extend",`${t.name} +${sec}s`);}
 function resetTimer(id,toZero=false){const t=timers[id];if(!t)return;update(ref(db,"timers/"+id),{remain:toZero?0:t.total,running:false,startTime:null});logEvent("Reset",t.name);}
 function startTimer(id){const t=timers[id];if(!t||t.running)return;update(ref(db,"timers/"+id),{running:true,startTime:Date.now()});logEvent("Start",t.name);}
@@ -115,7 +141,7 @@ function pauseTimer(id){const t=timers[id];if(!t||!t.running)return;update(ref(d
 function deleteTimer(id){if(!confirm("削除しますか？"))return;remove(ref(db,"timers/"+id));logEvent("Delete",id);}
 function resetAll(){if(!confirm("⚠️ 全てのタイマーを削除しますか？"))return;set(ref(db,"timers"),{});logEvent("ResetAll","全体リセット");}
 
-// ===== Rendering =====
+// ===== 描画 =====
 function render(){list.innerHTML="";const arr=Object.values(timers||{});const cols=Math.ceil(arr.length/5);for(let c=0;c<cols;c++){const col=document.createElement("div");col.className="column";arr.slice(c*5,c*5+5).forEach(t=>col.appendChild(renderTimer(t)));list.appendChild(col);}updateBars();}
 function renderTimer(t){const d=document.createElement("div");d.className="timer";d.dataset.id=t.id;d.innerHTML=`
 <input type="text" class="js-name" value="${t.name}">
@@ -132,26 +158,39 @@ d.querySelector(".js-start").addEventListener("click",()=>startTimer(t.id));
 d.querySelector(".js-pause").addEventListener("click",()=>pauseTimer(t.id));
 d.querySelector(".js-delete").addEventListener("click",()=>deleteTimer(t.id));
 return d;}
-function updateBars(){document.querySelectorAll(".timer").forEach(box=>{const id=box.dataset.id;const t=timers[id];if(!t)return;box.querySelector(".js-time").textContent=fmt(t.remain);const bar=box.querySelector(".js-bar");const pct=t.total>0?Math.max(0,Math.min(100,(1-(t.remain/t.total))*100)):0;bar.style.width=pct+"%";box.querySelectorAll(".js-extend").forEach(b=>b.disabled=t.running);});}
+function updateBars(){document.querySelectorAll(".timer").forEach(box=>{const id=box.dataset.id;const t=localTimers[id]||timers[id];if(!t)return;box.querySelector(".js-time").textContent=fmt(t.remain);const bar=box.querySelector(".js-bar");const pct=t.total>0?Math.max(0,Math.min(100,(1-(t.remain/t.total))*100)):0;bar.style.width=pct+"%";box.querySelectorAll(".js-extend").forEach(b=>b.disabled=t.running);});}
 
-// ===== Firebase Sync =====
+// ===== Firebase同期 + ローカル進行 =====
 onValue(ref(db,"timers"),snap=>{
   timers=snap.val()||{};
-  const now=Date.now();
   Object.values(timers).forEach(t=>{
-    if(t.running&&t.startTime){
-      const elapsed=Math.floor((now-t.startTime)/1000);
-      const remain=Math.max(0,t.total-elapsed);
-      if(remain!==t.remain){
-        update(ref(db,"timers/"+t.id),{remain});
-        if(remain===0){logEvent("Completed",t.name);beepPattern();doneMsg.textContent=`${t.name} が完了しました`;modal.style.display="flex";}
-      }
-    }
+    localTimers[t.id]={...t};
   });
   render();
 });
 
-doneOk.addEventListener("click",()=>{modal.style.display="none";});
+setInterval(()=>{
+  const now=Date.now();
+  Object.values(localTimers).forEach(t=>{
+    if(t.running&&t.startTime){
+      const elapsed=Math.floor((now-t.startTime)/1000);
+      const remain=Math.max(0,t.total-elapsed);
+      if(remain!==t.remain){
+        t.remain=remain;
+        if(remain===0){
+          update(ref(db,"timers/"+t.id),{running:false,remain:0});
+          logEvent("Completed",t.name);
+          doneMsg.textContent=`${t.name} が完了しました`;
+          modal.style.display="flex";
+          startBeepLoop();
+        }
+      }
+    }
+  });
+  updateBars();
+},1000);
+
+doneOk.addEventListener("click",()=>{modal.style.display="none";stopBeepLoop();});
 addBtn.addEventListener("click",addTimer);
 resetAllBtn.addEventListener("click",resetAll);
 </script>
